[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.3"]

[project]
authors = [
  {name = "Marcel van der Veldt", email = "marcelveldt@users.noreply.github.com"},
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "async-timeout",
  "pillow",
  "shortuuid",
]
description = "Python module to talk to Logitech Squeezebox players directly (without Logitech server)."
license = {text = "Apache-2.0"}
name = "aioslimproto"
readme = "README.md"
requires-python = ">=3.10"
version = "2.3.3"

[project.optional-dependencies]
test = [
  "black==24.2.0",
  "codespell==2.2.6",
  "mypy==1.8.0",
  "ruff==0.2.2",
  "pytest==8.0.2",
  "pytest-asyncio==0.23.5",
  "pytest-aiohttp==1.0.5",
  "pytest-cov==4.1.0",
  "pre-commit==3.6.2",
  "pylint==3.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.codespell]
ignore-words-list = "provid,hass,followings"

[tool.mypy]
check_untyped_defs = true
python_version = "3.11"
#disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
mypy_path = "aioslimproto/"
no_implicit_optional = true
show_error_codes = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "aiorun",
  "coloredlogs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
]

[tool.setuptools]
include-package-data = true
packages = ["aioslimproto"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
aioslimproto = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true

# enable later: "C90", "PTH", "TCH", "RET", "ANN"
extend-exclude = ["app_vars.py"]
ignore = ["PLR2004", "N818"]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "PL", "Q", "SIM", "TID", "ARG"]
target-version = "py310"
unfixable = ["F841"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.pylint]

max-args = 10
max-branches = 25
max-returns = 15
max-statements = 50
